@@ -8,9 +8,7 @@ Testing
 
 Cleanup
 - cleanup common hash into "data" and put in data.c??
-- bug debug around all the checks
-- unload -> destroy?
-- handle -> module_handle?
+- debug around all the checks
 
 Audit
 - code review to reduce memory footprint
